crates/ink/tests/ui/trait_def/fail/definition_unsafe.rs
#[ink::trait_definition]
pub unsafe trait TraitDefinition {
    #[ink(message)]
    fn message(&self);
}

fn main() {}
