crates/ink/tests/ui/trait_def/fail/definition_unsafe.stderr
error: ink! trait definitions cannot be unsafe
 --> tests/ui/trait_def/fail/definition_unsafe.rs:2:5
  |
2 | pub unsafe trait TraitDefinition {
  |     ^^^^^^
